<resources>
    <string name="app_name">PROJECT</string>
    <string name="DateTitle">날짜</string>
    <string name="MainTitle">메인</string>
    <string name="PersonalTitle">개인정보</string>
    <string name="StyleTitle">스타일</string>
    <string name="WeatherTitle">날씨</string>

    <string name="Dcalendar">달력</string>
    <string name="DselectDate">날짜 선택</string>
    <string name="DselectDateHint">날짜를 선택해주세요.</string>
    <string name="Dok">확인</string>

    <string name="Wsunny">맑음</string>
    <string name="Wrainy">비</string>
    <string name="Wgloomy">흐림</string>
    <string name="Wsnowy">눈</string>

    <string name="MinputDate">날짜 입력</string>
    <string name="MinputWeather">날씨 입력</string>
    <string name="MinputPersonal">개인정보</string>

    <string name="Mdate">날짜 :</string>
    <string name="Mweather">오늘의 날씨</string>
    <string name="Mpersonal">몸무게, 키, 체형</string>
    <string name="Mstyle">스타일 추천</string>
    <string name="MstyleResult">스타일</string>

</resources>
